--- a/2023/em/em_1_p1b/em_1_p1b_03.md
+++ b/2023/em/em_1_p1b/em_1_p1b_03.md
@@ -1,1 +1,5 @@
+---
+elementos: As
+---
 
+**Apresente** a configuração eletrônica do estado fundamental e os números quânticos do orbital atômico mais energético o átomo de arsênio.
