--- a/2023/em/em_1_p1b/em_1_p1b_08.md
+++ b/2023/em/em_1_p1b/em_1_p1b_08.md
@@ -1,1 +1,3 @@
+Quando $\pu{0,24 g}$ de aspirina (um composto de carbono, hidrogênio e oxigênio) é queimado, formam-se $\pu{0,52 g}$ de dióxido de carbono e $\pu{0,094 g}$ de água.
 
+**Determine** a alternativa com a fórmula empírica da aspirina.
