--- a/2023/em/em_1_p1b/em_1_p1b_10.md
+++ b/2023/em/em_1_p1b/em_1_p1b_10.md
@@ -1,1 +1,6 @@
+A nitroglicerina é um líquido sensível ao choque, que detona pela reação:
+$$
+    \ce{ C3H5(NO3)3(l) -> N2(g) + H2O(g) + CO2(g) + O2(g) }
+$$
 
+**Determine** o volume total de gases produzido, em $\pu{88,5 kPa}$ e $\pu{175 \degree C}$, na detonação de $\pu{454 g}$ de nitroglicerina.
