--- a/2023/em/em_1_p1a/em_1_p1a_01.md
+++ b/2023/em/em_1_p1a/em_1_p1a_01.md
@@ -1,1 +1,3 @@
+Um sinal de trânsito emite luz verde com frequência $\pu{5,7e14 Hz}$.
 
+**Determine** o comprimento de onda da luz emitida pelo sinal.
