--- a/2023/em/em_2_p1a/em_2_p1a_07.md
+++ b/2023/em/em_2_p1a/em_2_p1a_07.md
@@ -1,10 +1,7 @@
----
-elementos: Li, H, N
----
+Considere os compostos:
 
-Compostos que possam ser usados para acumular hidrogênio em veículos estão sendo ativamente procurados. Uma das reações estudadas para a armazenarem do hidrogênio é
-$$
-    \ce{ Li3N(s) + 2 H2(g) -> LiNH2(s) + 2 LiH(s) }
-$$
+1. 3-metilhex-3-eno
+2. 3-etil-4-metilpent-2-eno
+3. 2,3-dimetil-5-etilex-2-eno
 
-**Determine** a massa de $\ce{Li3N}$ necessária para produzir $\pu{5,2 g}$ de $\ce{LiH}$.
+**Apresente** a estrutura de cada composto.
