--- a/2023/em/em_2_p1a/em_2_p1a_09.md
+++ b/2023/em/em_2_p1a/em_2_p1a_09.md
@@ -1,3 +1,46 @@
-Um bebê, acometido de infecção brônquica severa, está com problemas respiratórios. O anestesista administra uma mistura de hélio e oxigênio, com $\pu{92,3}\%$ de $\ce{O2}$ em massa. A pressão atmosférica é $\pu{730 Torr}$.
+A testosterona é o principal hormônio sexual masculino e um esteroide anabolizante.
 
-**Determine** a pressão parcial do oxigênio na mistura que está sendo administrada no bebê.
+```latex
+\chemfig{
+                  % 1
+           -[:264]% 2
+           -[:150]% 3
+           -[:210]% 4
+           -[:270]% 5
+           -[:330]% 6
+                     (
+                -[:30]% 7
+                         (
+                   -[:342]% 8
+                    -[:54]% 9
+                   -[:126]% 10
+                             (
+                    -[:72,,,1]OH% 11
+                             )
+                   -[:198]% -> 2
+                         )
+                -[:90]% -> 2
+                     )
+           -[:270]% 12
+           -[:210]% 13
+           -[:150]% 14
+    -[:210,,,,drh]% 15
+           -[:150]% 16
+                     (
+               =[:210,,,,fix]O% 17
+                     )
+            -[:90]% 18
+            -[:30]% 19
+           -[:330]% 20
+                     (
+                -[:30]% -> 5
+                     )
+                     (
+               -[:270]% -> 14
+                     )
+            -[:90]% 21
+}
+```
+
+**Apresente** a fórmula molecular da testosterona.
+
