--- a/2023/em/em_2_p1a/em_2_p1a_10.md
+++ b/2023/em/em_2_p1a/em_2_p1a_10.md
@@ -1,7 +1,40 @@
-Os *airbags* de automóveis contém cristais de azida de sódio, $\ce{NaN3}$, que, durante uma colisão, decompõem-se rapidamente para dar gás nitrogênio e o metal sódio:
-$$
-    \ce{ 2 NaN3(s) -> 2 Na(s) + 3 N2(g) }
-$$
-O gás nitrogênio liberado no processo infla instantaneamente o *airbag*.
+O vitamina A ou retinol é um micronutriente que desempenha papel importante no ciclo visual.
 
-**Determine** a massa de azida de sódio necessária para gerar gás nitrogênio suficiente para encher um *airbag* de $\pu{57 L}$, em $\pu{1,37 atm}$ e $\pu{25 \degree C}$.
+```latex
+\chemfig{
+                  % 1
+           -[:210]% 2
+    -[:270,,,,drh]% 3
+                     (
+               -[:210]% 4
+                         (
+                   -[:310]% 8
+                         )
+                         (
+                   -[:230]% 9
+                         )
+               -[:150]% 5
+                -[:90]% 6
+                -[:30]% 7
+               -[:330]% -> 2
+                     )
+           -[:330]% 10
+     -[:30,,,,dlh]% 11
+           -[:330]% 12
+                     (
+               -[:270]% 21
+                     )
+     -[:30,,,,drh]% 13
+           -[:330]% 14
+     -[:30,,,,dlh]% 15
+           -[:330]% 16
+                     (
+               -[:270]% 20
+                     )
+     -[:30,,,,drh]% 17
+           -[:330]% 18
+        -[:30,,,1]OH% 19
+}
+```
+
+**Classifique** todos os átomos de carbono da vitamina A quanto a sua hibridização.
