--- a/2023/em/em_2_p1b/em_2_p1b_04.md
+++ b/2023/em/em_2_p1b/em_2_p1b_04.md
@@ -1,3 +1,8 @@
-Considere os íons: $\ce{Na^+}$, $\ce{Mg^{2+}}$, $\ce{F^-}$.
+Considere as reações.
 
-**Ordene** os íons em função de seu raio iônico.
+1. $\ce{ H2(g) + I2(s) -> 2 HI(g) }$ 
+2. $\ce{ 2 Ag(s) + Br2(l) -> 2 AgBr(s) }$ 
+3. $\ce{ O2(g) -> O2(aq) }$ 
+4. $\ce{ 2 NO2(g) -> N2O4(g) }$ 
+
+**Determine** o sinal da entropia padrão de cada reação.
