--- a/2023/em/em_2_p1b/em_2_p1b_05.md
+++ b/2023/em/em_2_p1b/em_2_p1b_05.md
@@ -1,10 +1,15 @@
----
-elementos: Te, I, Be, Mg
----
 
-Considere os pares de elementos
+Considere a reação de decomposição do carbonato de magnésio.
+$$
+    \ce{ MgCO3(s) -> MgO(s) + CO2(g) }
+$$
+Suponha que $\Delta H^\circ_\mathrm{r}$ e $\Delta S^\circ_\mathrm{r}$ são independentes da temperatura.
 
-1. Telúrio e iodo.
-2. Berílio e magnésio.
+**Determine** a faixa de temperatura em que a decomposição do carbonato de magnésio é espontânea.
 
-**Compare** a afinidade eletrônica dos elementos de cada par.
+Considere os dados:
+
+|                                                                         | $\ce{MgCO3(s)}$ | $\ce{CO2(g)}$ | $\ce{MgO(s)}$ |
+| :---------------------------------------------------------------------- | --------------: | ------------: | ------------: |
+| Entalpia padrão de formação, $\Delta H_\mathrm{f}^\circ/{\pu{kJ//mol}}$ |    $\pu{-1100}$ |   $\pu{-394}$ |   $\pu{-602}$ |
+| Entropia padrão molar, $S_\mathrm{m}^\circ/{\pu{J//K.mol}}$             |     $\pu{65,7}$ |    $\pu{214}$ |   $\pu{26,9}$ |
