--- a/2023/em/em_2_p1b/em_2_p1b_06.md
+++ b/2023/em/em_2_p1b/em_2_p1b_06.md
@@ -1,9 +1,7 @@
+Considere os compostos:
 
-Considere as equações simplificadas.
+1. 2,2,4-trimetilpentano
+2. 1,2,3,4-tetrametilcicloeptano
+3. 1-isopropil-2-metilciclobutano.
 
-1. $\ce{ NaBH4(s) + H2O(l) -> NaBO2(aq) + H2(g) }$
-2. $\ce{ Mg(N3)2(s) + H2O(l) -> Mg(OH)2(aq) + HN3(aq) }$
-3. $\ce{ NaCl(aq) + SO3(g) + H2O(l) -> Na2SO4(aq) + HCl(aq) }$
-4. $\ce{ Fe2P(s) + S(s) -> P4S10(s) + FeS(s) }$
-
-**Apresente** a equação química balanceada para cada equação simplificada.
+**Apresente** a estrutura de cada composto.
