--- a/2023/em/em_2_p1b/em_2_p1b_07.md
+++ b/2023/em/em_2_p1b/em_2_p1b_07.md
@@ -1,10 +1,7 @@
----
-elementos: Li, H, N
----
+Considere os compostos:
 
-Compostos que possam ser usados para acumular hidrogênio em veículos estão sendo ativamente procurados. Uma das reações estudadas para a armazenarem do hidrogênio é
-$$
-    \ce{ Li3N(s) + 2 H2(g) -> LiNH2(s) + 2 LiH(s) }
-$$
+1. 3-isopropil-2,4-dimetilpent-2-eno
+2. 4-etil-2-metilex-2-eno
+3. 1,2-dimetilciclobuteno
 
-**Determine** a massa de $\ce{Li3N}$ necessária para produzir $\pu{5,2 g}$ de $\ce{LiH}$.
+**Apresente** a estrutura de cada composto.
