--- a/2023/em/em_2_p1b/em_2_p1b_09.md
+++ b/2023/em/em_2_p1b/em_2_p1b_09.md
@@ -1,3 +1,44 @@
-Um bebê, acometido de infecção brônquica severa, está com problemas respiratórios. O anestesista administra uma mistura de hélio e oxigênio, com $\pu{92,3}\%$ de $\ce{O2}$ em massa. A pressão atmosférica é $\pu{730 Torr}$.
+O estradiol é o principal hormônio sexual feminino, importante na regulação do ciclo estral e do ciclo menstrual.
 
-**Determine** a pressão parcial do oxigênio na mistura que está sendo administrada no bebê.
+```latex
+\chemfig{
+                  % 1
+           -[:264]% 2
+           -[:150]% 3
+           -[:210]% 4
+           -[:270]% 5
+           -[:330]% 6
+                     (
+                -[:30]% 7
+                         (
+                   -[:342]% 8
+                    -[:54]% 9
+                   -[:126]% 10
+                             (
+                    -[:72,,,1]OH% 11
+                             )
+                   -[:198]% -> 2
+                         )
+                -[:90]% -> 2
+                     )
+           -[:270]% 12
+           -[:210]% 13
+           -[:150]% 14
+     -[:90,,,,dlh]% 15
+                     (
+                -[:30]% -> 5
+                     )
+           -[:150]% 16
+    -[:210,,,,dlh]% 17
+           -[:270]% 18
+                     (
+           -[:210,,,2]HO% 20
+                     )
+    -[:330,,,,dlh]% 19
+                     (
+                -[:30]% -> 14
+                     )
+}
+```
+
+**Apresente** a fórmula molecular do estradiol.
