--- a/2023/em/em_2_p1a/em_2_p1a_04.md
+++ b/2023/em/em_2_p1a/em_2_p1a_04.md
@@ -1,3 +1,8 @@
-Considere os íons: $\ce{Na^+}$, $\ce{Mg^{2+}}$, $\ce{F^-}$.
+Considere as reações.
 
-**Ordene** os íons em função de seu raio iônico.
+1. $\ce{ NH3(g) + HCl(g) -> NH4Cl(s) }$ 
+2. $\ce{ 2 H2(l) + O2(l) -> 2 H2O(g) }$ 
+3. $\ce{ N2(g) + 3 H2(g) -> 2 NH3(g) }$ 
+4. $\ce{ BaCl2.2H2O(s) -> BaCl2(s) + 2 H2O(g) }$ 
+
+**Determine** o sinal da entropia padrão de cada reação.
