--- a/2023/em/em_2_p1a/em_2_p1a_08.md
+++ b/2023/em/em_2_p1a/em_2_p1a_08.md
@@ -1,3 +1,11 @@
-Quando $\pu{0,53 g}$ de sacarose (um composto de carbono, hidrogênio e oxigênio) é queimado, formam-se $\pu{0,31 g}$ de água e $\pu{0,82 g}$ de dióxido de carbono.
+Considere os compostos.
 
-**Determine** a fórmula empírica da sacarose.
+```latex
+\chemname{\chemfig{-[1]-[-1]OH}}{1}
+\qquad
+\chemname{\chemfig{-[1](=[3,,,,fix]O)-[-1]OH}}{2}
+\qquad
+\chemname{\chemfig{-[1](=[3,,,,fix]O)-[-1]H}}{3}
+```
+
+**Identifique** as funções orgânicas de cada composto.
