--- a/2023/em/em_2_p1b/em_2_p1b_10.md
+++ b/2023/em/em_2_p1b/em_2_p1b_10.md
@@ -1,7 +1,29 @@
-Os *airbags* de automóveis contém cristais de azida de sódio, $\ce{NaN3}$, que, durante uma colisão, decompõem-se rapidamente para dar gás nitrogênio e o metal sódio:
-$$
-    \ce{ 2 NaN3(s) -> 2 Na(s) + 3 N2(g) }
-$$
-O gás nitrogênio liberado no processo infla instantaneamente o *airbag*.
+O ácido ascórbico ou vitamina C é uma molécula com papel importante em várias reações bioquímicas celulares. 
 
-**Determine** a massa de azida de sódio necessária para gerar gás nitrogênio suficiente para encher um *airbag* de $\pu{57 L}$, em $\pu{1,37 atm}$ e $\pu{25 \degree C}$.
+```latex
+\chemfig{
+                          O% 7
+                    =[:60]% 6
+                   -[:114]% 5
+                             (
+                   -[:168,,,2]HO% 9
+                             )
+    -[:42,,,,dbr={73}{73}]% 4
+                             (
+                    -[:96,,,1]OH% 10
+                             )
+                   -[:330]% 3
+                             (
+                       -[:258]O% 8
+                       -[:186]% -> 6
+                             )
+                    -[:24]% 2
+                             (
+                    -[:84,,,1]OH% 11
+                             )
+                   -[:324]% 1
+                -[:24,,,1]OH% 12
+}
+```
+
+**Classifique** todos os átomos de carbono da vitamina C quanto a sua hibridização.
