--- a/2023/em/em_2_p1a/em_2_p1a_01.md
+++ b/2023/em/em_2_p1a/em_2_p1a_01.md
@@ -1,3 +1,7 @@
+---
+elementos: P, Cl
+---
+
 Quando $\pu{0,2 g}$ de fósforo reage com cloro para formar tricloreto de fósforo, $\ce{PCl3}$,
 $$
     \ce{ 2 P(s) + 3 Cl2(g) -> 2 PCl3(l) }
