qui_2_obj: atualizado

--- a/src/diagramador/latex/templates/braun.cls
+++ b/src/diagramador/latex/templates/braun.cls
@@ -1575,7 +1575,7 @@
                         [
                             \bfseries
                             \skip_horizontal:n {2em}
-                            Valor:: ~  
+                            Valor: ~  
                             \num 
                                 [ 
                                     detect-all, 
