--- a/2023/em/em_1_p1a/em_1_p1a_04.md
+++ b/2023/em/em_1_p1a/em_1_p1a_04.md
@@ -1,3 +1,7 @@
+---
+elementos: Na, Mg, F
+---
+
 Considere os íons: $\ce{Na^+}$, $\ce{Mg^{2+}}$, $\ce{F^-}$.
 
 **Ordene** os íons em função de seu raio iônico.
