--- a/2023/em/em_1_p1b/em_1_p1b_04.md
+++ b/2023/em/em_1_p1b/em_1_p1b_04.md
@@ -1,3 +1,7 @@
+---
+elementos: S, Cl, P
+---
+
 Considere os íons: $\ce{S^{2-}}$, $\ce{Cl^-}$, $\ce{P^{3-}}$.
 
 **Ordene** os íons em função de seu raio iônico.
