--- a/2023/em/em_2_p1a/em_2_p1a_05.md
+++ b/2023/em/em_2_p1a/em_2_p1a_05.md
@@ -7,9 +7,7 @@ Suponha que $\Delta H^\circ_\mathrm{r}$ e $\Delta S^\circ_\mathrm{r}$ são indep
 
 **Determine** a faixa de temperatura em que a redução da magnetita é espontânea.
 
-Considere os dados:
-
-|                                                                         | $\ce{Fe3O4(s)}$ | $\ce{CO2(g)}$ | $\ce{CO2(g)}$ | $\ce{Fe(s)}$ | $\ce{C(grafita)}$ |
+| Dados em $\pu{25 \degree C}$                                            | $\ce{Fe3O4(s)}$ | $\ce{CO2(g)}$ | $\ce{CO2(g)}$ | $\ce{Fe(s)}$ | $\ce{C(grafita)}$ |
 | :---------------------------------------------------------------------- | --------------: | ------------: | ------------: | -----------: | ----------------: |
 | Entalpia padrão de formação, $\Delta H_\mathrm{f}^\circ/{\pu{kJ//mol}}$ |    $\pu{-1120}$ |   $\pu{-394}$ |   $\pu{-394}$ |              |                   |
 | Entropia padrão molar, $S_\mathrm{m}^\circ/{\pu{J//K.mol}}$             |      $\pu{146}$ |    $\pu{214}$ |    $\pu{214}$ |  $\pu{27,3}$ |       $\pu{5,74}$ |
