--- a/2023/em/em_2_p1a/em_2_p1a_09.md
+++ b/2023/em/em_2_p1a/em_2_p1a_09.md
@@ -1,6 +1,8 @@
 A testosterona é o principal hormônio sexual masculino e um esteroide anabolizante.
 
 ```latex
+\chemnameinit{}
+\chemname{
 \chemfig{
                   % 1
            -[:264]% 2
@@ -40,6 +42,7 @@ A testosterona é o principal hormônio sexual masculino e um esteroide anaboliz
                      )
             -[:90]% 21
 }
+}{Testosterona}
 ```
 
 **Apresente** a fórmula molecular da testosterona.
