--- a/2023/em/em_2_p1a/em_2_p1a_10.md
+++ b/2023/em/em_2_p1a/em_2_p1a_10.md
@@ -1,6 +1,8 @@
 O vitamina A ou retinol é um micronutriente que desempenha papel importante no ciclo visual.
 
 ```latex
+\chemnameinit{}
+\chemname{
 \chemfig{
                   % 1
            -[:210]% 2
@@ -35,6 +37,7 @@ O vitamina A ou retinol é um micronutriente que desempenha papel importante no 
            -[:330]% 18
         -[:30,,,1]OH% 19
 }
+}{Vitamina A}
 ```
 
 **Classifique** todos os átomos de carbono da vitamina A quanto a sua hibridização.
