--- a/2023/em/em_2_p1b/em_2_p1b_09.md
+++ b/2023/em/em_2_p1b/em_2_p1b_09.md
@@ -1,6 +1,8 @@
 O estradiol é o principal hormônio sexual feminino, importante na regulação do ciclo estral e do ciclo menstrual.
 
 ```latex
+\chemnameinit{}
+\chemname{
 \chemfig{
                   % 1
            -[:264]% 2
@@ -39,6 +41,7 @@ O estradiol é o principal hormônio sexual feminino, importante na regulação 
                 -[:30]% -> 14
                      )
 }
+}{Estradiol}
 ```
 
 **Apresente** a fórmula molecular do estradiol.
