--- a/2023/em/em_2_p1b/em_2_p1b_10.md
+++ b/2023/em/em_2_p1b/em_2_p1b_10.md
@@ -1,6 +1,8 @@
 O ácido ascórbico ou vitamina C é uma molécula com papel importante em várias reações bioquímicas celulares. 
 
 ```latex
+\chemnameinit{}
+\chemname{
 \chemfig{
                           O% 7
                     =[:60]% 6
@@ -24,6 +26,7 @@ O ácido ascórbico ou vitamina C é uma molécula com papel importante em vári
                    -[:324]% 1
                 -[:24,,,1]OH% 12
 }
+}{Vitamina C}
 ```
 
 **Classifique** todos os átomos de carbono da vitamina C quanto a sua hibridização.
