--- a/2023/em/em_1_p1b/em_1_p1b_05.md
+++ b/2023/em/em_1_p1b/em_1_p1b_05.md
@@ -1,10 +1,10 @@
 ---
-elementos: Ge, Se, B, C
+elementos: P, As, B, C
 ---
 
 Considere os pares de elementos
 
-1. Germânio e selênio.
-2. Boro e carbono.
+1. Boro e carbono.
+2. Fósforo e arsênio.
 
 **Compare** a afinidade eletrônica dos elementos de cada par.
