--- a/2023/em/em_2_p1a/em_2_p1a_03.md
+++ b/2023/em/em_2_p1a/em_2_p1a_03.md
@@ -1,9 +1,6 @@
-Considere os dados em $\pu{25 \degree C}$.
-
-|                                                                         | $\ce{H2O(l)}$ | $\ce{CO2(g)}$ | $\ce{C6H12O6(s)}$ |
-| :---------------------------------------------------------------------- | ------------: | ------------: | ----------------: |
-| Entalpia padrão de formação, $\Delta H_\mathrm{f}^\circ/{\pu{kJ//mol}}$ |   $\pu{-286}$ |   $\pu{-394}$ |      $\pu{-1270}$ |
-
 **Determine** a entalpia padrão de combustão da glicose, $\ce{C6H12O6}$, em $\pu{25 \degree C}$.
 
+| Dados em $\pu{25 \degree C}$                                            | $\ce{H2O(l)}$ | $\ce{CO2(g)}$ | $\ce{C6H12O6(s)}$ |
+| :---------------------------------------------------------------------- | ------------: | ------------: | ----------------: |
+| Entalpia padrão de formação, $\Delta H_\mathrm{f}^\circ/{\pu{kJ//mol}}$ |   $\pu{-286}$ |   $\pu{-394}$ |      $\pu{-1270}$ |
 
