--- a/2023/t15_1/t15_1_06.md
+++ b/2023/t15_1/t15_1_06.md
@@ -4,6 +4,5 @@ $$
 $$
 Se o número complexo $z_0$ é tal que $\frac{1}{|z_0 -1|}$ é o máximo do conjunto $\left\{\frac{1}{|z - 1|}: z \in S \right\}$, determine os possíveis argumentos de:
 $$
-    \frac{4 - z_0 - \overline
-   {z_0}}{z_0 - \overline{z_0} + 2i}
+    \frac{4 - z_0 - \overline{z_0}}{z_0 - \overline{z_0} + 2i}
 $$
