qui_3_obj: atualizado

--- a/src/diagramador/latex/templates/braun.cls
+++ b/src/diagramador/latex/templates/braun.cls
@@ -225,6 +225,10 @@
 
 \cs_set_eq:NN \degree \textdegree
 
+\RequirePackage [ thicklines ] { cancel }
+
+\cs_set:Npn \CancelColor { \color { red } }
+
 %============================================================%
 %   SI UNITS
 %============================================================%
